# silero_vad_server

./: Cargo.toml  Makefile  README.md
src/: main.rs  vad.rs
test/: test_realtime_vad.html
