[package]
name = "silero_vad_server"
version = "0.2.0"
edition = "2024"

[dependencies]
log = "0.4"
env_logger = "0.11"

clap = { version = "4.5", features = ["derive", "env"] }
anyhow = "1.0.86"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
wav_io = "0.1.14"


axum = { version = "0.8", features = ["multipart", "ws"] }
tokio = { version = "1.0", features = ["full"] }
dotenv = "0.15.0"


silero_vad_jit = { version = "0.2" }
bytes = "1.10.1"
